--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
             </div>
               <div class="card-links">
               <a href="#" class="card-link" onclick="last()">Prev Question</a>
-              <a href="#" class="card-link timer-link" onclick="time()">
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="45"> </input>Set Timer</a>
+              <div>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="45"> </input>
+                <a href="#" class="card-link timer-link" onclick="time()">
+                Set Timer</a>
+              </div>
             </div>
             </div>
     </div>
@@ -61,9 +64,9 @@
           <h5 class="card-title rules-title">Optional Rules</h5>
           <p class="card-text">
             <ul>
-                <li>Determine someone to go first</li>
-                <li>Start the Game</li>
-                <li>Answer a question and try to not spend more than 45 seconds on each</li>
+                <li>Have one person share screen</li>
+                <li>Start the Game by clickin the card</li>
+                <li>Take turns answering question and try to not spend more than 45 seconds on each</li>
                 <li>Click the card to render new prompt</li>
                 <li>Enable the optional timer to show when 45 seconds is up</li>
                 <li>Select, Restart Game on the Question Bank card to reset the bank</li>
