--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,400;1,700&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" />
     <script src="newCard.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+<script src="/__/firebase/8.2.4/firebase-app.js"></script>
+
+  <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+  <script src="/__/firebase/8.2.4/firebase-analytics.js"></script>
+
+  <!-- Add Firebase products that you want to use -->
+  <script src="/__/firebase/8.2.4/firebase-auth.js"></script>
+  <script src="/__/firebase/8.2.4/firebase-firestore.js"></script>
+
   </head>
   <body class="container">
     <h1>ReThink SUB Speed Dating</h1>
@@ -40,6 +56,7 @@
             </div>
               <div class="card-links">
               <a href="#" class="card-link" onclick="last()">Prev Question</a>
+              <a href="#" class="card-link" onclick="renderStartCard()">Next Question</a>
               <div>
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="45"> </input>
                 <a href="#" class="card-link timer-link" onclick="time()">
@@ -50,7 +67,6 @@
     </div>
     <!---->
     <div class="options">
-        
       <div class="card question-history">
         <div class="card-body">
           <h5 class="card-title">Question Bank</h5>
@@ -75,6 +91,19 @@
           </p>
         </div>
       </div>
+      </div>
+      <div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title rules-title">Submit Your Own Question</h5>
+            <em><a href="#"><h6 class="card-subtitle reset" >Click Here to Vote on Questions</h6></a></em>
+            <p class="card-text question-submit">
+              What's the Question?
+              <input type="text" class="submit-question" id="question" placeholder="What's your favorite bird?"> </input>
+              <button type="button" class="btn btn-info">Submit</button>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
